SecurityPOC/force-app/main/default/objects/Contact/fields/Assigned_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Supervisor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Position_Title__c</field>
            <operation>equals</operation>
            <value>Supervisor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>