SecurityPOC/force-app/main/default/objects/Contact/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <label>Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Shift</fullName>
            </value>
            <value>
                <fullName>2nd Shift</fullName>
            </value>
            <value>
                <fullName>3rd Shift</fullName>
            </value>
            <value>
                <fullName>1st/2nd Shifts</fullName>
            </value>
            <value>
                <fullName>2nd/3rd Shifts</fullName>
            </value>
            <value>
                <fullName>3rd/1st Shifts</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>