SecurityPOC/force-app/main/default/objects/Contact/fields/Background_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Background Check Completed</label>
    <type>Checkbox</type>
</CustomField>