SecurityPOC/force-app/main/default/objects/Contact/fields/Best_Time_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Contact__c</fullName>
    <label>Best Time to Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Midday</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>