SecurityPOC/force-app/main/default/objects/Contact/fields/Cardio_Tested__c.field-meta.xml
<CustomField>
    <fullName>Cardio_Tested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the employee undergone the semiannual cardio testing</description>
    <label>Cardio Tested</label>
    <type>Checkbox</type>
</CustomField>