SecurityPOC/force-app/main/default/objects/Contact/fields/Certification_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Certification_Expiration_Date__c</fullName>
    <label>Certification Expiration Date</label>
    <type>Date</type>
</CustomField>