SecurityPOC/force-app/main/default/objects/Contact/fields/Certification_Number__c.field-meta.xml
<CustomField>
    <fullName>Certification_Number__c</fullName>
    <label>Certification Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>