SecurityPOC/force-app/main/default/objects/Contact/fields/CPR_FirstAid_Certified__c.field-meta.xml
<CustomField>
    <fullName>CPR_FirstAid_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPR/FirstAid Certified</label>
    <type>Checkbox</type>
</CustomField>