SecurityPOC/force-app/main/default/objects/Contact/fields/Emergency_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Number__c</fullName>
    <label>Emergency Contact Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>