SecurityPOC/force-app/main/default/objects/Contact/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Part-Time</fullName>
            </value>
            <value>
                <fullName>Full-Time</fullName>
            </value>
            <value>
                <fullName>On-Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>