SecurityPOC/force-app/main/default/objects/Contact/fields/Gun_Certified__c.field-meta.xml
<CustomField>
    <fullName>Gun_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gun Certified</label>
    <type>Checkbox</type>
</CustomField>