SecurityPOC/force-app/main/default/objects/Contact/fields/License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Expiration_Date__c</fullName>
    <description>When does the gun license need to be renewed?</description>
    <label>License Expiration Date</label>
    <type>Date</type>
</CustomField>