SecurityPOC/force-app/main/default/objects/Contact/fields/Next_Shift_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Shift_Date__c</fullName>
    <label>Next Shift Date</label>
    <type>Date</type>
</CustomField>