SecurityPOC/force-app/main/default/objects/Contact/fields/Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Title__c</fullName>
    <label>Position Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Security Guard</fullName>
            </value>
            <value>
                <fullName>Armed Security Officer</fullName>
            </value>
            <value>
                <fullName>Mobile Patrol Officer</fullName>
            </value>
            <value>
                <fullName>Access Control Officer</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>