SecurityPOC/force-app/main/default/objects/Contact/fields/Relationship_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Contact__c</fullName>
    <label>Relationship to Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Other Family Member</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>