SecurityPOC/force-app/main/default/objects/Contact/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Contacts (Service Location)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>