SecurityPOC/force-app/main/default/objects/Contact/fields/Shift_Type__c.field-meta.xml
<CustomField>
    <fullName>Shift_Type__c</fullName>
    <description>What shift are they currently assigned</description>
    <label>Shift Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>Rotating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>