SecurityPOC/force-app/main/default/objects/Contact/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>when where they hired</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>