SecurityPOC/force-app/main/default/objects/Contact/fields/Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Training_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>have they completed basic security training</description>
    <label>Training Completed</label>
    <type>Checkbox</type>
</CustomField>