SecurityPOC/force-app/main/default/objects/Contact/fields/Uniform_Size__c.field-meta.xml
<CustomField>
    <fullName>Uniform_Size__c</fullName>
    <label>Uniform Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>X-Large</fullName>
            </value>
            <value>
                <fullName>XX-Large</fullName>
            </value>
            <value>
                <fullName>XXX-Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>