SecurityPOC/force-app/main/default/objects/Contact/recordTypes/Guard_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Guard_Record_Type</fullName>
    <active>true</active>
    <label>Guard Record Type</label>
</RecordType>