SecurityPOC/force-app/main/default/objects/Contact/listViews/Client_Contacts.listView-meta.xml
<ListView>
    <fullName>Client_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Client_Record_Type</value>
    </filters>
    <label>Client Contacts</label>
</ListView>