SecurityPOC/force-app/main/default/objects/Contact/listViews/Guard_Contacts.listView-meta.xml
<ListView>
    <fullName>Guard_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Guard_Record_Type</value>
    </filters>
    <label>Guard Contacts</label>
</ListView>